--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "gsap": "^3.9.1",
     "normalize.css": "^8.0.1",
+    "npm": "^9.3.1",
     "react": "^17.0.2",
     "react-confetti": "^6.0.1",
     "react-dom": "^17.0.2",
@@ -21,7 +22,7 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "react-scripts": "5.0.0"
+    "react-scripts": "^2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
